[package]
name = "peer2package"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
description = "P2P package manager"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.2"
quinn-proto = "0.10.2"
tokio = { version = "1.33.0", features = ["full", "macros"] }
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
ring = "0.17.5"
rustls-pemfile = "1.0.3"
uuid = { version = "1", features = ["v4"] }
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
yoke = { version = "0.7.2", features = ["derive"] }
blake3 = "1.5"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rcgen = "0.11.3"
